--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.password=password
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/phones
+spring.datasource.password=1234
+spring.datasource.username=root
+#spring.h2.console.enabled=true
